[package]
name = "sudonim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "snim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.219"
clap = { version = "4.5.45", features = ["derive"] }
toml = "0.9.5"
fmt = "0.1.0"
spinners = "4.1.1"
