[package]
name = "sudonim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "snim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.45", features = ["derive"] }
toml = "0.9.5"
fmt = "0.1.0"
spinners = "4.1.1"
serde = { version = "1.0.219", features = ["derive"] }
